codex-rs/tui/src/snapshots/codex_tui__model_migration__tests__model_migration_prompt.snap
---
source: tui/src/model_migration.rs
assertion_line: 453
expression: terminal.backend()
---

> Millie just got an upgrade. Introducing millie-35B-A3B-7GB

  Upgrade for the latest and greatest agentic coding model.

  You can continue using millie-35B-A3B-11GB if you prefer.

  Choose how you'd like Millie to proceed.

› 1. Try new model
  2. Use existing model

  Use ↑/↓ to move, press enter to confirm
