codex-rs/tui/src/snapshots/codex_tui__model_migration__tests__model_migration_prompt_gpt5_codex.snap
---
source: tui/src/model_migration.rs
assertion_line: 507
expression: terminal.backend()
---

> Millie just got an upgrade. Introducing millie-35B-A3B-7GB

  We recommend switching from millie-35B-A3B-11GB to
  millie-35B-A3B-7GB.

  Millie-optimized flagship for deep and fast reasoning.
  Learn more about millie-35B-A3B-7GB at
  https://llmsforall.com

  Press enter to continue
